Update dependency: use `mirror-protocol` from crates.io

--- a/contracts/mock_mirror/Cargo.toml
+++ b/contracts/mock_mirror/Cargo.toml
@@ -16,7 +16,7 @@ cosmwasm-bignumber = "1.0"
 cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
 cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
 cw20 = "0.2"
-mirror-protocol = { path = "../../packages/mirror" }
+mirror-protocol = { version = "2.0.0" }
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 
