--- a/contracts/martian_field/Cargo.toml
+++ b/contracts/martian_field/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "strategy-anc-ust"
+name = "martian-field"
 version = "0.1.0"
-authors = ["larry0x <larry@delphidigital.io>"]
+authors = ["larry_0x <larry@delphidigital.io>"]
 edition = "2018"
 exclude = ["contract.wasm", "hash.txt"]
 
