Adapter for staking contracts

--- a/contracts/mock_mirror/Cargo.toml
+++ b/contracts/mock_mirror/Cargo.toml
@@ -12,10 +12,9 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-bignumber = "1.0"
 cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
 cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
+fields-of-mars = { path = "../../packages/fields_of_mars" }
 cw20 = "0.2"
-mirror-protocol = { version = "2.0.0" }
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
