--- a/contracts/mock_anchor/Cargo.toml
+++ b/contracts/mock_anchor/Cargo.toml
@@ -12,11 +12,10 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-# The Anchor team have not pushed v1.0.0 to crates.io, so we have to import using GitHub URL
-anchor-token = { version = "1.0.0", git = "https://github.com/Anchor-Protocol/anchor-token-contracts" }
 cosmwasm-bignumber = "1.0"
 cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
 cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
 cw20 = "0.2"
+fields-of-mars = { path = "../../packages/fields_of_mars" }
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
