Fixes bugs; package now builds

--- a/packages/fields_of_mars/Cargo.toml
+++ b/packages/fields_of_mars/Cargo.toml
@@ -10,3 +10,4 @@ cosmwasm-std = "0.10.1"
 cw20 = "0.2"
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
+terra-cosmwasm = { version = "1.2.3" }
