--- a/contracts/mock_mirror/Cargo.toml
+++ b/contracts/mock_mirror/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mock-mirror"
-version = "0.1.0"
-authors = ["larry0x <larry@delphidigital.io>"]
+version = "0.3.0"
+authors = ["larry_0x <larry@delphidigital.io>"]
 edition = "2018"
 exclude = ["contract.wasm", "hash.txt"]
 
@@ -14,7 +14,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
 cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
-fields-of-mars = { path = "../../packages/fields_of_mars" }
+field-of-mars = { path = "../../packages/field_of_mars" }
 cw20 = "0.2"
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
