Update README amd rustfmt

--- a/contracts/martian_field/rustfmt.toml
+++ b/contracts/martian_field/rustfmt.toml
@@ -5,5 +5,5 @@ max_width = 90
 newline_style = "unix"
 overflow_delimited_expr = true
 tab_spaces = 4
-use_small_heuristics = "Off"
+use_small_heuristics = "off"
 wrap_comments = false
