--- a/contracts/mock_anchor/Cargo.toml
+++ b/contracts/mock_anchor/Cargo.toml
@@ -13,9 +13,9 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
-cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
-cw20 = "0.7.0"
 field-of-mars = { version = "0.3.0", path = "../../packages/field_of_mars" }
+cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
+cw20 = "0.7.0"
+cw-storage-plus = "0.7.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
