--- a/contracts/mock_mars/Cargo.toml
+++ b/contracts/mock_mars/Cargo.toml
@@ -13,10 +13,13 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-bignumber = "2.1.0"
-cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
-cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
+# Mars
 field-of-mars = { version = "0.3.0", path = "../../packages/field_of_mars" }
+# CosmWasm
+cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
+cw-storage-plus = "0.7.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
+# Terra
 terra-cosmwasm = "2.1.0"
+cosmwasm-bignumber = "2.1.0"
