--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "@terra-money/terra.js": "^2.0.0-beta.3",
+    "@terra-money/terra.js": "^2.0.0-beta.15",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chalk": "^4.1.1",
     "dotenv": "^10.0.0",
+    "table": "^6.7.1",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
