--- a/contracts/martian_field/Cargo.toml
+++ b/contracts/martian_field/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "martian-field"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["larry_0x <larry@delphidigital.io>"]
 edition = "2018"
 license = "UNLICENSED"
@@ -13,9 +13,9 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-field-of-mars = { version = "0.4.0", path = "../../packages/field_of_mars" }
-cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
-cw20 = "0.7.0"
-cw-storage-plus = "0.7.0"
+field-of-mars = { version = "0.4.1", path = "../../packages/field_of_mars" }
+cosmwasm-std = "0.16.0"
+cw20 = "0.8.0"
+cw-storage-plus = "0.8.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
