--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,20 +1,19 @@
 {
   "dependencies": {
-    "@terra-money/terra.js": "^2.0.0-beta.15",
+    "@terra-money/terra.js": "^2.0.1",
     "@types/bn.js": "^5.1.0",
-    "bn.js": "^4.12.0",
+    "bn.js": "^5.2.0",
     "chai": "^4.3.4",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
     "table": "^6.7.1",
-    "yargs": "^17.0.1"
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.17",
+    "@types/chai": "^4.2.21",
     "@types/chalk": "^2.2.0",
-    "@types/node": "^10.12.18",
-    "@types/yargs": "^17.0.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "@types/yargs": "^17.0.2",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
   }
 }
