--- a/contracts/mock_red_bank/Cargo.toml
+++ b/contracts/mock_red_bank/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mock-mars"
+name = "mock-red-bank"
 version = "0.4.1"
 authors = ["larry_0x <larry@delphidigital.io>"]
 edition = "2018"
@@ -13,13 +13,13 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-# Mars
-field-of-mars = { version = "0.4.1", path = "../../packages/field_of_mars" }
-# CosmWasm
+fields-of-mars = { version = "0.4.1", path = "../../packages/fields_of_mars" }
+
 cosmwasm-std = "0.16.0"
 cw-storage-plus = "0.8.0"
+
+terra-cosmwasm = "2.1.0"
+
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-# Terra
-terra-cosmwasm = "2.1.0"
-cosmwasm-bignumber = "2.1.0"
+
