--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = ["contracts/*", "packages/*"]
 
-[profile.release.package.field-of-mars]
+[profile.release.package.fields-of-mars]
 opt-level = 3
 debug = false
 debug-assertions = false
