--- a/contracts/mock_oracle/Cargo.toml
+++ b/contracts/mock_oracle/Cargo.toml
@@ -15,6 +15,9 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 fields-of-mars = { path = "../../packages/fields_of_mars" }
 
+mars = { git = "https://github.com/mars-protocol/protocol.git" }
+astroport = { git = "https://github.com/astroport-fi/astroport.git" }
+
 cosmwasm-std = "0.16"
 cw-storage-plus = "0.8"
 
