--- a/contracts/mock_red_bank/Cargo.toml
+++ b/contracts/mock_red_bank/Cargo.toml
@@ -15,10 +15,12 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 fields-of-mars = { path = "../../packages/fields_of_mars" }
 
+mars = { git = "https://github.com/mars-protocol/protocol.git" }
+red-bank = { git = "https://github.com/mars-protocol/protocol.git" }
+
 cosmwasm-std = "0.16"
 cw20 = "0.8"
 cw-storage-plus = "0.8"
 
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-
