--- a/contracts/mock_mirror/Cargo.toml
+++ b/contracts/mock_mirror/Cargo.toml
@@ -15,11 +15,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 fields-of-mars = { path = "../../packages/fields_of_mars" }
 
-mirror-protocol = { version = "2.1.1", git = "https://github.com/Mirror-Protocol/mirror-contracts.git" }
+mirror-protocol = "2.1.1"
 
 cosmwasm-std = "0.16.0"
-cw20 = "0.8"
-cw-storage-plus = "0.8"
+cw20 = "0.8.0"
+cw-storage-plus = "0.8.0"
 
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
