--- a/contracts/mock_oracle/Cargo.toml
+++ b/contracts/mock_oracle/Cargo.toml
@@ -15,11 +15,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 fields-of-mars = { path = "../../packages/fields_of_mars" }
 
-mars = { git = "https://github.com/mars-protocol/protocol.git" }
-astroport = { git = "https://github.com/astroport-fi/astroport.git" }
+astroport = { path = "../../packages/astroport" }
+mars = { path = "../../packages/mars_core" }
 
 cosmwasm-std = "0.16.0"
-cw-storage-plus = "0.8"
+cw-storage-plus = "0.8.0"
 
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
