--- a/contracts/mock-mirror/Cargo.toml
+++ b/contracts/mock-mirror/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mock-oracle"
+name = "mock-mirror"
 version = "0.5.0"
 authors = ["larry_0x <larry@delphidigital.io>"]
 edition = "2018"
@@ -13,13 +13,14 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-fields-of-mars = { path = "../../packages/fields_of_mars" }
+fields-of-mars = { path = "../../packages/fields-of-mars" }
 
-astroport = { path = "../../packages/astroport" }
-mars = { path = "../../packages/mars_core" }
+mirror-protocol = "2.1.1"
 
 cosmwasm-std = "0.16.0"
-cw-storage-plus = "0.8.0"
+# Mirror uses cw20 0.8.0 which is not compatible with the latest (0.9.1)
+cw20 = "0.8.0"
+cw-storage-plus = "0.9.1"
 
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
