--- a/contracts/mock-red-bank/Cargo.toml
+++ b/contracts/mock-red-bank/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "mock-anchor"
-version = "0.4.1"
+name = "mock-red-bank"
+version = "0.5.0"
 authors = ["larry_0x <larry@delphidigital.io>"]
 edition = "2018"
 license = "UNLICENSED"
@@ -13,13 +13,13 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-fields-of-mars = { path = "../../packages/fields_of_mars" }
+fields-of-mars = { path = "../../packages/fields-of-mars" }
 
-anchor-token = "0.2.0"
+mars-core = { path = "../../packages/mars-core" }
 
 cosmwasm-std = "0.16.0"
-cw20 = "0.8.0"
-cw-storage-plus = "0.8.0"
+cw20 = "0.9.1"
+cw-storage-plus = "0.9.1"
 
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
