--- a/packages/fields-of-mars/Cargo.toml
+++ b/packages/fields-of-mars/Cargo.toml
@@ -9,13 +9,12 @@ repository = "https://github.com/mars-protocol/field-of-mars"
 [dependencies]
 anchor-token = "0.2.0"
 astroport = { path = "../astroport" }
-mars = { path = "../mars_core" }
-red-bank = { path = "../red_bank" } 
-mars-periphery = { path = "../mars_periphery" }
+mars-core = { path = "../mars-core" }
+mars-periphery = { path = "../mars-periphery" }
 mirror-protocol = "2.1.1"
 
 cosmwasm-std = "0.16.0"
-cw20 = "0.8.0"
+cw20 = "0.9.1"
 
 cosmwasm-bignumber = "2.2.0"
 terra-cosmwasm = "2.2.0"
