--- a/contracts/mock-oracle/Cargo.toml
+++ b/contracts/mock-oracle/Cargo.toml
@@ -15,7 +15,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 fields-of-mars = { path = "../../packages/fields-of-mars" }
 
-astroport = { path = "../../packages/astroport" }
+astroport = { git = "https://github.com/astroport-fi/astroport" }
 mars-core = { path = "../../packages/mars-core" }
 
 cosmwasm-std = "0.16.0"
