--- a/contracts/martian-field/Cargo.toml
+++ b/contracts/martian-field/Cargo.toml
@@ -18,5 +18,7 @@ fields-of-mars = { path = "../../packages/fields-of-mars" }
 cosmwasm-std = "0.16.0"
 cw-storage-plus = "0.8.0"
 
+cw-asset = { path = "../../../cw-asset", features = ["terra", "legacy"] }
+
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
