--- a/packages/fields-of-mars/Cargo.toml
+++ b/packages/fields-of-mars/Cargo.toml
@@ -18,5 +18,7 @@ cw20 = "0.9.1"
 cosmwasm-bignumber = "2.2.0"
 terra-cosmwasm = "2.2.0"
 
+cw-asset = { path = "../../../cw-asset", features = ["terra", "legacy"] }
+
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
