--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,6 +5,7 @@
     "chai": "^4.3.4",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
+    "table": "^6.7.5",
     "yargs": "^17.1.1"
   },
   "devDependencies": {
