--- a/contracts/martian-field/Cargo.toml
+++ b/contracts/martian-field/Cargo.toml
@@ -18,7 +18,7 @@ fields-of-mars = { path = "../../packages/fields-of-mars" }
 cosmwasm-std = "0.16.0"
 cw-storage-plus = "0.8.0"
 
-cw-asset = { version = "0.3.1", features = ["terra", "legacy"] }
+cw-asset = { version = "0.3.2", features = ["legacy"] }
 
 uint = "0.9.1"
 
