--- a/packages/fields-of-mars/Cargo.toml
+++ b/packages/fields-of-mars/Cargo.toml
@@ -15,7 +15,7 @@ cw20 = "0.9.1"
 
 terra-cosmwasm = "2.2.0"
 
-cw-asset = { version = "0.3.1", features = ["terra", "legacy"] }
+cw-asset = { version = "0.3.2", features = ["legacy"] }
 
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
