--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,6 +5,7 @@
     "chai": "^4.3.4",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
+    "promptly": "^3.2.0",
     "table": "^6.7.5",
     "yargs": "^17.1.1"
   },
@@ -12,8 +13,18 @@
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.2.21",
     "@types/chalk": "^2.2.0",
+    "@types/promptly": "^3.0.2",
     "@types/yargs": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
