--- a/packages/fields-of-mars/Cargo.toml
+++ b/packages/fields-of-mars/Cargo.toml
@@ -10,8 +10,8 @@ repository = "https://github.com/mars-protocol/field-of-mars"
 astroport = "0.3.1"
 mars-core = { path = "../mars-core" }
 
-cosmwasm-std = "0.16.0"
-cw20 = "0.9.1"
+cosmwasm-std = "^0.16"
+cw20 = "^0.9"
 
 terra-cosmwasm = "2.2.0"
 
