--- a/packages/fields-of-mars/Cargo.toml
+++ b/packages/fields-of-mars/Cargo.toml
@@ -11,7 +11,7 @@ astroport = "0.3.1"
 cosmwasm-std = "^0.16"
 cw20 = "^0.9"
 cw-asset = { version = "0.3.2", features = ["legacy"] }
-mars-core = { path = "../mars-core" }
+mars-core = { git = "https://github.com/mars-protocol/mars-core", tag = "v1.0.0-rc4" }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 terra-cosmwasm = "2.2.0"
