--- a/contracts/mock-red-bank/Cargo.toml
+++ b/contracts/mock-red-bank/Cargo.toml
@@ -18,6 +18,6 @@ cw20 = "^0.9"
 cw-asset = { version = "0.3.2", features = ["legacy"] }
 cw-storage-plus = "^0.9"
 fields-of-mars = { path = "../../packages/fields-of-mars" }
-mars-core = { git = "https://github.com/mars-protocol/mars-core", tag = "v1.0.0-rc4" }
+mars-core = "1.0.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
