--- a/contracts/martian-field/Cargo.toml
+++ b/contracts/martian-field/Cargo.toml
@@ -13,9 +13,9 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = "^0.16"
-cw-asset = { version = "0.3.2", features = ["legacy"] }
-cw-storage-plus = "^0.9"
+cosmwasm-std = "0.16"
+cw-asset = { version = "1.0", features = ["legacy"] }
+cw-storage-plus = "0.9"
 fields-of-mars = { path = "../../packages/fields-of-mars" }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
