--- a/contracts/mock-oracle/Cargo.toml
+++ b/contracts/mock-oracle/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mock-oracle"
 version = "1.0.0"
-authors = ["larry_0x <larry@delphidigital.io>"]
+authors = ["larry <larry@delphidigital.io>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
 repository = "https://github.com/mars-protocol/field-of-mars"
@@ -13,11 +13,11 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-astroport = "0.3.1"
+astroport = "1.0"
 fields-of-mars = { path = "../../packages/fields-of-mars" }
-cosmwasm-std = "^0.16"
-cw-asset = { version = "0.3.2", features = ["legacy"] }
-cw-storage-plus = "^0.9"
-mars-core = "1.0.0"
+cosmwasm-std = "0.16"
+cw-asset = { version = "1.0", features = ["legacy"] }
+cw-storage-plus = "0.9"
+mars-core = "1.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
