--- a/contracts/martian-field-closure/Cargo.toml
+++ b/contracts/martian-field-closure/Cargo.toml
@@ -17,4 +17,5 @@ cosmwasm-std = "0.16"
 cw-asset = { version = "1.0", features = ["legacy"] }
 cw-storage-plus = "0.9"
 fields-of-mars = { path = "../../packages/fields-of-mars" }
+schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
